ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: parneettest.com   # Replace with your domain name or IP address
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nextjs-app   # Name of your Service
                port:
                  number: 5000       # Port your application listens on
